clang/test/BSC/Negative/Ownership/RuleCheck/func-call/func-call.cbs
// RUN: %clang_cc1 -verify %s

int * owned IntPtrOwned() {
	int * owned a;
	return a; // expected-error {{cannot read a, because it is uninitialized}}
}

void func1() {
	int * owned a = IntPtrOwned();
	int * owned b = a;
	int * owned c = a; // expected-error {{cannot read a, because it is moved at line: 10}}
} // expected-error {{b's memory will leak at the end of scope}} expected-error {{c's memory will leak at the end of scope}}

void callee1(int * owned a, int * owned b) {
	int c = 1;
} // expected-error {{a's memory will leak at the end of scope}} expected-error {{b's memory will leak at the end of scope}}

void caller1(int * owned a, int * owned b) {
	callee1(a, b);
}

void caller2(int * owned a, int * owned b) {
	callee1(a, b);
	callee1(a, b); // expected-error {{cannot read a, because it is moved at line: 23}} expected-error {{cannot read b, because it is moved at line: 23}}
}

void caller3(int * owned a, int * owned b) {
	callee1(a, b);
	int * owned c = a; // expected-error {{cannot read a, because it is moved at line: 28}}
} // expected-error {{c's memory will leak at the end of scope}}

void caller4(int * owned a) {
	int * owned b;
	callee1(a, b); // expected-error {{cannot read b, because it is uninitialized}}
}

void caller5(int * owned a, int * owned b) {
	int * owned c = a;
	callee1(a, b); // expected-error {{cannot read a, because it is moved at line: 38}}
} // expected-error {{c's memory will leak at the end of scope}}

int * owned IntPtrOwned1() {
	int num = 1;
	int * owned a = (int * owned)&num;
	return a;
}

int * owned IntPtrOwned2(int * owned a) {
	return a;
}

void caller6(int * owned a) {
	int * owned b = IntPtrOwned2(a);
} // expected-error {{b's memory will leak at the end of scope}}

struct A {
	int owned a;
	int owned b;
};

void callee2(int owned a, int owned b) {
	int c = 1;
} // expected-error {{a's memory will leak at the end of scope}} expected-error {{b's memory will leak at the end of scope}}

void func10(struct A a) {
	callee2(a.a, a.b);
}

struct B {
	int * owned a;
	int * owned b;
};

void func11(struct B b) {
	callee1(b.a, b.b);
}